<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/darkBrown"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="510dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/picMain"
                    android:layout_width="0dp"
                    android:layout_height="430dp"
                    android:layout_margin="16dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/CircleImageView"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <LinearLayout
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/back" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="back"
                        android:textColor="@color/white" />

                </LinearLayout>

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/blurView"
                    android:layout_width="0dp"
                    android:background="@drawable/blur_background"
                    app:blurOverlayColor="#10ffffff"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="@+id/picMain"
                    app:layout_constraintEnd_toEndOf="@+id/picMain"
                    app:layout_constraintStart_toStartOf="@+id/picMain"
                    app:layout_constraintTop_toBottomOf="@+id/picMain">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp">

                        <TextView
                            android:id="@+id/titleTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="title"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/btn_3" />

                        <TextView
                            android:id="@+id/extraTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Extra"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toTopOf="@+id/imageView7"
                            app:layout_constraintStart_toStartOf="@+id/titleTxt"
                            app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/extraTxt"
                            app:srcCompat="@drawable/star" />

                        <TextView
                            android:id="@+id/ratingTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="0"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                            app:layout_constraintStart_toEndOf="@+id/imageView7"
                            app:layout_constraintTop_toTopOf="@+id/imageView7" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </eightbitlab.com.blurview.BlurView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginHorizontal="16dp"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffee_size"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/sizeList"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/plusCart"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:background="@drawable/stroke_bg"
                        android:text="+"
                        android:textSize="21sp"
                        android:gravity="center"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/numberItemTxt"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:text="1"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/minusCart"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:background="@drawable/stroke_bg"
                        android:text="-"
                        android:textSize="21sp"
                        android:gravity="center"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/priceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/_0"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView12"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@android:style/Widget.Button"
                    android:background="@drawable/orange_bg"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:id="@+id/addToCartBtn"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/buy"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>